--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.example.j.gte"
+        applicationId "com.example.j.myapplication123"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
